--- a/Notion.html
+++ b/Notion.html
@@ -54,5 +54,6 @@
     <div id="output" class="mt-8 pt-4 border-t border-gray-200 text-gray-800 text-base leading-relaxed">
     </div>
   </div>
+  <script src="Notion.js"></script>
   </body>
 </html>
