--- a/Notion.html
+++ b/Notion.html
@@ -4,14 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> پروفایل شخص</title>
+    <link rel="stylesheet" href="Notion.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Vazirmatn', sans-serif;
-      background-color: #f3f4f6;
-    }
-  </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
 
