--- a/Notion.html
+++ b/Notion.html
@@ -3,37 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> پروفایل شخص</title>
-    <link rel="stylesheet" href="Notion.css">
+  <title>پروفایل شخص</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="Notion.css">
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
 
-  <div class="bg-white p-8 rounded-2xl shadow-2xl w-full max-w-2xl border-t-8 border-indigo-500">
-    <h1 class="text-3xl font-bold text-center text-indigo-800 mb-6"> پروفایل شخص</h1>
-    <p class="text-center text-gray-600 mb-8">لطفا اطلاعات خود را برای ساخت وارد کنید.</p>
+  <div class="card w-full max-w-2xl">
+    <h1 class="text-3xl font-bold text-center mb-6">برنامه پروفایل شخص</h1>
+    <p class="text-center text-gray-600 mb-8">لطفا اطلاعات خود را برای ساخت پروفایل وارد کنید.</p>
 
     <div class="space-y-4">
       <div>
-        <label for="firstName" class="block text-sm font-medium text-gray-700">نام:</label>
-        <input type="text" id="firstName" class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" placeholder="مثال: معین">
+        <label for="firstName" class="label block text-sm">نام:</label>
+        <input type="text" id="firstName" class="input-field mt-1" placeholder="مثال: معین">
       </div>
       <div>
-        <label for="lastName" class="block text-sm font-medium text-gray-700">نام خانوادگی:</label>
-        <input type="text" id="lastName" class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" placeholder="مثال: ثابت ایمانی">
+        <label for="lastName" class="label block text-sm">نام خانوادگی:</label>
+        <input type="text" id="lastName" class="input-field mt-1" placeholder="مثال: ثابت ایمانی">
       </div>
       <div>
-        <label for="birthYear" class="block text-sm font-medium text-gray-700">سال تولد:</label>
-        <input type="number" id="birthYear" class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" placeholder="مثال: 2003">
+        <label for="birthYear" class="label block text-sm">سال تولد:</label>
+        <input type="number" id="birthYear" class="input-field mt-1" placeholder="مثال: 2003">
       </div>
       <div>
-        <label for="job" class="block text-sm font-medium text-gray-700">شغل:</label>
-        <input type="text" id="job" class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" placeholder="مثال: برنامه‌نویس">
+        <label for="job" class="label block text-sm">شغل:</label>
+        <input type="text" id="job" class="input-field mt-1" placeholder="مثال: برنامه‌نویس">
       </div>
       <div>
-        <label for="friends" class="block text-sm font-medium text-gray-700">دوستان (با کاما جدا کنید):</label>
-        <input type="text" id="friends" class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" placeholder="مثال: علیرضا، امیررضا، رضا">
+        <label for="friends" class="label block text-sm">دوستان (با کاما جدا کنید):</label>
+        <input type="text" id="friends" class="input-field mt-1" placeholder="مثال: علیرضا، امیررضا، رضا">
       </div>
       <div class="flex items-center justify-start py-2">
         <input id="hasDriversLicense" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
@@ -41,14 +41,17 @@
       </div>
 
       <div class="pt-4">
-        <button id="generateBtn" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-bold text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-300 transform hover:scale-105">
+        <button id="generateBtn" class="btn">
           ایجاد پروفایل
         </button>
       </div>
     </div>
-    <div id="output" class="mt-8 pt-4 border-t border-gray-200 text-gray-800 text-base leading-relaxed">
+
+    <div id="output" class="output-section mt-8 text-base leading-relaxed">
     </div>
+
   </div>
+
   <script src="Notion.js"></script>
-  </body>
+</body>
 </html>
